# micro-packet

./: .gitignore  CMakeLists.txt  README.md
include/: block_queue.h  camera.h  color.h  diff_geom.h  geometry.h  ld_sampler.h  light.h  mat3.h  material.h  occlusion_tester.h  plane.h  render_target.h  scene.h  sphere.h  vec.h
psimd/: psimd.h
src/: CMakeLists.txt  block_queue.cpp  camera.cpp  color.cpp  ld_sampler.cpp  light.cpp  main.cpp  plane.cpp  render_target.cpp  scene.cpp  sphere.cpp  vec.cpp
